[gd_scene load_steps=30 format=2]

[ext_resource path="res://ennemie/Boss.gd" type="Script" id=1]
[ext_resource path="res://shared_ressource/sprites/forceshield.png" type="Texture" id=2]
[ext_resource path="res://shared_ressource/sprites/boss.png" type="Texture" id=3]
[ext_resource path="res://shared_ressource/radial.png" type="Texture" id=4]
[ext_resource path="res://ennemie/Fireball_spell.gd" type="Script" id=5]
[ext_resource path="res://shared_ressource/sprites/boss_page.png" type="Texture" id=6]
[ext_resource path="res://shared_ressource/glass_broke.wav" type="AudioStream" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ) ],
"loop": true,
"name": "New Anim",
"speed": 10.0
} ]

[sub_resource type="OccluderPolygon2D" id=12]
closed = false
polygon = PoolVector2Array( -0.0737801, -30.6436, -0.0737801, 33.7901 )

[sub_resource type="CircleShape2D" id=13]
radius = 30.419

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 33.1252, 33.0719 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 33.2423, 33.5101 )

[sub_resource type="CanvasItemMaterial" id=16]
blend_mode = 1

[sub_resource type="Curve" id=17]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=18]
curve = SubResource( 17 )

[sub_resource type="Curve" id=19]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=20]
curve = SubResource( 19 )

[sub_resource type="ParticlesMaterial" id=21]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -100.0
scale = 20.0
scale_curve = SubResource( 20 )
color = Color( 1, 0, 0, 1 )
hue_variation_curve = SubResource( 18 )

[sub_resource type="ParticlesMaterial" id=22]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 1.0
angular_velocity = 72.61
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 32.77

[node name="Boss" type="KinematicBody2D"]
z_index = 3
collision_layer = 41
collision_mask = 33
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
rotation = 1.5708
texture = ExtResource( 3 )

[node name="Shield" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 11 )
animation = "New Anim"
frame = 20
playing = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = 4
position = Vector2( -0.019146, -0.0382767 )
occluder = SubResource( 12 )
light_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 13 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 14 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 15 )

[node name="Spells" type="Node" parent="."]

[node name="Fireball_spell" type="Node" parent="Spells"]
script = ExtResource( 5 )

[node name="Cooldown" type="Timer" parent="Spells/Fireball_spell"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Shield" type="Node" parent="Spells"]

[node name="State" type="Node" parent="."]

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 2.0
color = Color( 0.0352941, 1, 0.909804, 1 )
energy = 0.5
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_item_cull_mask = 3

[node name="Invicibility" type="Timer" parent="."]

[node name="Shield_broke" type="Particles2D" parent="."]
material = SubResource( 16 )
emitting = false
amount = 80
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 21 )

[node name="Boss_page" type="Particles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 22 )
texture = ExtResource( 6 )

[node name="EasierMode" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -38.17
pitch_scale = 0.81
mix_target = 2
[connection signal="on_fireball" from="." to="Spells/Fireball_spell" method="_on_Boss_on_fireball"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="end_of_cooldown" from="Spells/Fireball_spell" to="." method="_on_Fireball_end_of_cooldown"]
[connection signal="timeout" from="Spells/Fireball_spell/Cooldown" to="Spells/Fireball_spell" method="_on_Cooldown_timeout"]
[connection signal="timeout" from="Invicibility" to="." method="_on_Invicibility_timeout"]
[connection signal="timeout" from="EasierMode" to="." method="_on_EasierMode_timeout"]
